Issue: SSW-8820 : Add pcb socket in pwhm
Feature: Add a pcb socket to be used by any pcb app.

--- a/odl/makefile
+++ b/odl/makefile
@@ -4,6 +4,7 @@ include ../makefile.inc
 all: wld.odl
 wld.odl:  %: %.m4
 	m4 -P -DENABLE_USP_SERVER_SOCKET=$(CONFIG_SAH_WLD_ENABLE_USP_SERVER_SOCKET) \
+	-DENABLE_PCB_SERVER_SOCKET=$(CONFIG_SAH_WLD_ENABLE_PCB_SERVER_SOCKET) \
 	-DDISABLE_PERSIST=$(CONFIG_SAH_SERVICES_PWHM_DISABLE_PERSIST) \
 	-DDISABLE_NETMODEL=$(CONFIG_SAH_SERVICES_PWHM_DISABLE_NETMODEL) \
 	-DSTAGINGDIR=$(STAGINGDIR) $(<) > $(@)
