usp: move usp registration file from feed-prplos to pwhm component
The usp registration file is expected to be in the component level

Move wld_usp.odl file to feed-prplmesh

References: PPM-2579

Signed-off-by: Houssem Dafdouf <houssem.dafdouf_ext@softathome.com>

ci: baf: update autogenerated files

--- a/baf.yml
+++ b/baf.yml
@@ -3,7 +3,7 @@ short_description: "prplMesh WHM"
 long_description: "A Wireless Hardware Manager for prplMesh BWL Backend"
 
 type: plugin
-category: prplMesh
+category: prplmesh
 
 urls:
   opensource: "https://gitlab.com/prpl-foundation/prplmesh/pwhm/plugins/pwhm"
@@ -167,6 +167,10 @@ artifacts:
   destination: "/etc/amx/wld/wld_defaults/"
   permissions: "0644"
   only: CONFIG_SAH_SERVICES_PWHM_DISABLE_PERSIST
+- source: "odl/wld_usp.odl"
+  destination: "/etc/amx/wld/extensions/wld_usp.odl"
+  permissions: "0644"
+  only: CONFIG_SAH_WLD_ENABLE_USP_SERVER_SOCKET
 - source: "acl/admin/$(COMPONENT).json"
   destination: "$(ACLDIR)/admin/$(COMPONENT).json"
   permissions: "0660"
