--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,7 @@
 ---
+variables:
+  PC_XC_WRT_DEFAULT: "on"
+
 include:
   - remote: 'https://gitlab.com/prpl-foundation/tooling/yml-templates/raw/main/.component-pipeline.yml'
 
