--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 variables:
   PC_XC_WRT_DEFAULT: "on"
+  PC_XC_WRT_X86_64_GLIBC_23_05: "off"
 
 include:
   - remote: 'https://gitlab.com/prpl-foundation/tooling/yml-templates/raw/main/.component-pipeline.yml'
