baf: dependencies: set versions to "*"
Problem:
The versions specified in the baf.yml do not exists.

Solution:
Versions are only taken into account when doing crosscompilations,
so let's simply use the latest version available, indicated with a "*".

Signed-off-by: Matthias Franck <matthias.franck@softathome.com>

--- a/baf.yml
+++ b/baf.yml
@@ -215,11 +215,11 @@ dependencies:
   - name: "libsahtrace"
     min: "*"
   - name: "libswlc"
-    min: "master_v5.30.2"
+    min: "*"
   - name: "libswla"
-    min: "master_v3.12.8"
+    min: "*"
   - name: "openssl"
-    min: "master_v3.0.3"
+    min: "*"
   - name: "libnl"
     min: "*"
   - name: "libamxm"
