ci: add iwlwav-driver-uci as pWHM dependency
Adds packages `iwlwav-driver-uci` & `iwlwav-driver-uci-debug` as runtime
dependencies.

Closes: PPW-642

Signed-off-by: Sagar Reddy <snandanuri@maxlinear.com>

--- a/baf.yml
+++ b/baf.yml
@@ -255,3 +255,7 @@ dependencies:
   - name: "mod-netmodel"
   - name: "odl-generator"
     min: "master_v1.6.4"
+  - name: "kmod-iwlwav-driver-uci-debug"
+    only: CONFIG_TARGET_intel_x86&&PACKAGE_mod-whm-debug
+  - name: "kmod-iwlwav-driver-uci"
+    only: CONFIG_TARGET_intel_x86&&PACKAGE_mod-whm
